# BaPSF-Research

./: .gitignore  README.md  Untitled.ipynb  conda-lock.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  test.ipynb
bapsfda/: __init__.py
bapsfda/analysis/: __init__.py  _datafuncs.py  _datastructs.py  _fastcam.py  _fitfuncs.py  _interferometer.py  _langsweep.py  conditional.py  datafuncs.py  datastructs.py  fastcam.py  langsweep.py
bapsfda/analysis/visualization/: _plotting.py
bapsfda/diagnostics/: __init__.py  _fastcam.py  _interferometer.py  _langsweep.py
bapsfda/processing/: __init__.py  _datafuncs.py  _datastructs.py  _fitfuncs.py  _flow.py
bapsfda/processing/tests/: test_datafuncs.py
bapsfda/utils/_hdf5/: _dataset.py
bapsfda/visualization/: __init__.py  _plotting.py  plotting.py
data/: mach.ipynb  run06_sweep.ipynb  run07_sweep.ipynb  run14_sweep.ipynb  run15_sweep.ipynb  run16_sweep.ipynb  run17_sweep.ipynb
